# SMC-AgenticTrade

./: .env.example  .gitignore  CLAUDE.md  README.md  USER_MANUAL.md  pyproject.toml  requirements.txt  ruff.toml
.claude/Documents/: EURUSD SMC best strategies.md  SMC_Algorithmic_Trading_Specifications.md  system_architecture.md
.claude/Plan/: 01-Implementation Plan-Phase1.md  02-Implementation Plan-Phase2.md
.claude/Specs/: 01-Spec Document-Phase1.md  02-Spec Document-Phase2.md
app/: logging_config.py  main.py
app/clustering/: ancestry.py  cluster_engine.py  signature.py
app/dashboard/: flask_app.py
app/detector/: amd_phase.py  atr.py  context.py  fibonacci.py  fvg.py  gap_detector.py  htf_bias.py  kill_zone.py  long_wick_classifier.py  mmm_phase.py  mss.py  order_block.py  pd_zone.py  pipeline.py  smt_divergence.py  sweep.py  swings.py
app/gate/: decision_gate.py  publisher.py
app/ingestion/: finnhub_client.py  health.py  oanda_client.py  poller.py  stream_consumer.py
app/narrative/: gemini_client.py
app/notifications/: telegram.py
app/performance/: stats.py  tracker.py
app/storage/: db.py  repositories.py
app/strategies/: base.py  debate.py  orchestrator.py  scoring.py  strategy_01_unicorn.py  strategy_02_judas.py  strategy_03_confirmation.py  strategy_04_silver_bullet.py  strategy_05_nested_fvg.py  strategy_06_ifvg.py  strategy_07_ote_fvg.py  strategy_08_rejection_block.py  strategy_09_mmm.py  (+6 more)
config/: instruments.py  settings.py
scripts/: backfill_history.py  com.maddy.smc-tradeagents.plist  replay_day.py
tests/: conftest.py
(+33 files in other folders)
